[package]
name = "rs_wnd_service2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-service = "0.4"
actix-web = "3.3.2"
actix-rt = "2.2"
futures = "0.3.17"
anyhow = "1"
win_dbg_logger = "0.1.0"
log = "0.4"
ctrlc = { version = "3.2.0", features = ["termination"] }
